<resources>
    <string name="app_name">My Calculator</string>
    <string name="AC_button">AC</string>
    <string name="DEL_button">DEL</string>
    <string name="button1"> 1 </string>
    <string name="button2"> 2 </string>
    <string name="button3"> 3 </string>
    <string name="button4"> 4 </string>
    <string name="button5"> 5 </string>
    <string name="button6"> 6 </string>
    <string name="button7"> 7 </string>
    <string name="button8"> 8 </string>
    <string name="button9"> 9 </string>
    <string name="button0"> 0 </string>
    <string name="button."> . </string>
    <string name="op_add"> + </string>
    <string name="op_subtract"> - </string>
    <string name="op_multiply"> * </string>
    <string name="op_divide"> / </string>
    <string name="op_remainder"> % </string>
    <string name="op_equal"> = </string>


</resources>